# scraping_ecommerce

./: README.md  pyproject.toml
coleta_cb/: scrapy.cfg
coleta_cb/coleta_cb/: items.py  middlewares.py  pipelines.py  settings.py
coleta_magalu/: scrapy.cfg
coleta_magalu/coleta_magalu/: items.py  middlewares.py  pipelines.py  settings.py
coleta_magalu/coleta_magalu/spiders/: magalu.py
coleta_magalu/coleta_magalu/transforming/: main.py
coleta_meli/: scrapy.cfg
coleta_meli/coleta_meli/: items.py  middlewares.py  pipelines.py  settings.py
coleta_meli/coleta_meli/dashboard/: app.py
coleta_meli/coleta_meli/spiders/: meli.py
coleta_meli/coleta_meli/transforming/: main.py
data/: .data.jsonl  data_meli.jsonl  magalu.db  meli.db
