[tool.poetry]
name = "scraping-ecommerce"
version = "0.1.0"
description = "Web Scraping of web product data"
authors = ["Erick Bernardo <contato.bernardo25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
scrapy = "^2.11.2"
pandas = "^2.2.2"
duckdb = "^0.10.3"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
